send error removed

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
                 <label for="file-input">
                     Click here to select files for sharing
                 </label>
-                <button class="share-button">Share</button>
+                <!-- <button class="share-button">Share</button> -->
                 <input type="file" id="file-input">
             </div>
             <div class="files-list">
